# tv-truncator2

./: .cursorrules  .gitignore  Cargo.toml  README.md
.cursor/: prompts.md
.github/workflows/: ci-fast.yml  ci-full.yml
benches/: hot_paths.rs
docs/: GIT_COMMIT_POLICY.md  IC_ONBOARDING.md
src/: accuracy.rs  accuracy_store.rs  analyzer.rs  audio_chromaprint.rs  audio_comparison.rs  audio_correlation.rs  audio_energy_bands.rs  audio_extractor.rs  audio_features.rs  audio_fingerprint.rs  audio_hasher.rs  audio_mfcc.rs  audio_segment_utils.rs  audio_spectral_v2.rs  gstreamer_cutter.rs  gstreamer_extractor.rs  gstreamer_extractor_optimized.rs  gstreamer_extractor_v2.rs  hamming_bk_tree.rs  hasher.rs  input_discovery.rs  lib.rs  main.rs  parallel.rs  progress_display.rs  segment_detector.rs  state_machine.rs  synchronization.rs  video_processor.rs
src/similarity/: common.rs  comparison.rs  mod.rs  (+2 more)
tests/: accuracy_metric_baseline_test.rs  algorithm_validation.rs  analyze_old_samples.rs  audio_baseline_test.rs  audio_matching_regression_test.rs  audio_matching_tests.rs  chromaprint_diagnostic.rs  cli_sample_corpus_test.rs  cli_ux_test.rs  comprehensive_algorithm_test.rs  detection_similarity_unit_tests.rs  downscaled_test.rs  ending_credits_test.rs  golden_regression_harness.rs  gstreamer_tests.rs  identical_segment_tests.rs  integration_tests.rs  intro_outro_test.rs  outro_test.rs  performance_tests.rs  progress_tests.rs  sample_fixture_coverage.rs  simple_performance_test.rs  synthetic_validation.rs  video_cutting_tests.rs  video_cutting_validation_tests.rs
(+50 files in other folders)
